--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="figma" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="figma-in-con">
           <div class="figma-icon">
-            <img src="	https://abrsol.com/assets/img/icons/figma.svg" alt>
+            <img src="Figma.png" alt>
           </div>
           <div class="number-fig">92%</div>
         </div>
@@ -233,7 +233,7 @@
       <div class="sketch" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="sketch-in-con">
           <div class="sketch-icon">
-            <img src="	https://abrsol.com/assets/img/icons/sketch.svg" alt>
+            <img src="sketch.png" alt>
           </div>
           <div class="number-ske">80%</div>
         </div>
@@ -242,7 +242,7 @@
       <div class="XD" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="xd-in-con">
           <div class="xd-icon">
-            <img src="https://abrsol.com/assets/img/icons/xd.svg" alt>
+            <img src="xd.png" alt>
           </div>
           <div class="number-xd">80%</div>
         </div>
@@ -251,7 +251,7 @@
       <div class="wordpress" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="wp-in-con">
           <div class="wp-icon">
-            <img src="https://abrsol.com/assets/img/icons/wp.svg" alt>
+            <img src="wordpress.png" alt>
           </div>
           <div class="number-wp">80%</div>
         </div>
@@ -260,7 +260,7 @@
       <div class="react" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="re-in-con">
           <div class="re-icon">
-            <img src="https://abrsol.com/assets/img/icons/react.svg" alt>
+            <img src="react.png" alt>
           </div>
           <div class="number-re">80%</div>
         </div>
@@ -269,7 +269,7 @@
       <div class="javascript" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
         <div class="jv-in-con">
           <div class="jv-icon">
-            <img src="https://abrsol.com/assets/img/icons/js.svg" alt>
+            <img src="js.png" alt>
           </div>
           <div class="number-jv">80%</div>
         </div>
