--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio | Asim</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -276,7 +277,7 @@
         <p>JavaScript</p>
       </div>
     </div>
-    <div class="projects">
+    <!-- <div class="projects">
     <h2 class="portfolio">My Clients Stories</h2>
    </div>
    <div class="projectbox">
@@ -304,7 +305,90 @@
         <span>Senior Software</span>
       </div>
     </div>
+    </div> -->
+  <section class="testimonials">
+    <h2 class="section-title">What My Clients Say</h2>
+    <div class="testimonial-container">
+
+      <div class="testimonial-card">
+        <p class="testimonial-text">
+          “I like portfolio pages more and more each day. It makes my life easier and fits our needs perfectly. Keep up the excellent work.”
+        </p>
+        <div class="client-info">
+          <img src="https://i.pravatar.cc/100?img=1" alt="AR KING" class="client-img">
+          <div>
+            <h3 class="client-name">AR KING</h3>
+            <p class="client-role">UI/UX Designer</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <p class="testimonial-text">
+          “Very professional and creative work! The portfolio layout really stands out. Highly recommended.”
+        </p>
+        <div class="client-info">
+          <img src="https://i.pravatar.cc/100?img=2" alt="Asim" class="client-img">
+          <div>
+            <h3 class="client-name">Asim</h3>
+            <p class="client-role">Senior Software Engineer</p>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </section>
+  <br>
+  <br>
+  <br>
+    <section class="contact-boxes">
+      <div class="contact-main-div">
+        <div class="contact-card">
+          <h1>Lets Work Together!</h1>
+          <br>
+          <p>I design and code beautifully simple things and i love what i do. Just simple like that!</p>
+          <br>
+          <div class="input-dataone">
+            <input class="fname" placeholder="First Name">
+            <input class="lname" placeholder="Last Name">
+          </div>
+          <br>
+          <div class="input-datatwo">
+            <input class="emailname" placeholder="Email Address">
+            <input class="phonename" placeholder="Phone Number">
+          </div>
+          <br>
+         <select class="service">
+          <option value="UI/UX Design">UI/UX Design</option>
+          <option value="UI/UX Design">Web Design</option>
+          <option value="UI/UX Design">Graphic Design</option>
+          <option value="UI/UX Design">Branding Design</option>
+         </select>
+         <br><br>
+          <div class="input-datathree">
+            <textarea class="message" placeholder="Message"></textarea>
+          </div>
+          <br>
+          <button class="fed-btn">Send Message</button>
+        </div>
+        <div class="contact-right">
+          <div class="phone-icon"><i class="fa-solid fa-phone-volume"></i>
+            +92 327 8662 548
+          </div>
+          <br>
+          <div class="email-icon"><i class="fa-solid fa-envelope-circle-check"></i>
+            asimasimazam6@gmail.com
+          </div>
+          <br>
+          <div class="address-icon"><i class="fa-solid fa-location-dot"></i>
+            Warne Park Street Pine,
+             FL 33157, New York
+          </div>
+        </div>
+      </div>
+    </section>
+    <br><br>
+    <br><br>
     <div id="foot-manu">
       <ul>
      <li> <a href="about.html">About</a></li>
@@ -315,7 +399,7 @@
     </div>
     <br>
     <footer class="footbar">
-         © 2024 All rights reserved by Asim Azam
+        © 2024 All rights reserved by Asim Azam 
     </footer>
 </body>
 </html>
