--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <img src="https://i.pravatar.cc/100?img=1" alt="AR KING" class="client-img">
           <div>
             <h3 class="client-name">AR KING</h3>
-            <p class="client-role">UI/UX Designer</p>
+            <p class="client-roleone">UI/UX Designer</p>
           </div>
         </div>
       </div>
@@ -330,7 +330,7 @@
         <div class="client-info">
           <img src="https://i.pravatar.cc/100?img=2" alt="Asim" class="client-img">
           <div>
-            <h3 class="client-name">Asim</h3>
+            <h3 class="client-name">Asim Azam</h3>
             <p class="client-role">Senior Software Engineer</p>
           </div>
         </div>
