--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       </div>
     </div>
     </div> -->
-  <section class="testimonials">
+   <!-- <section class="testimonials">
     <h2 class="section-title">What My Clients Say</h2>
     <div class="testimonial-container">
 
@@ -337,7 +337,55 @@
       </div>
 
     </div>
+  </section>  -->
+
+
+  <section class="review-block">
+    <div class="review-block__wrapper">
+
+      <!-- Left Side -->
+      <div class="review-block__intro">
+        <h2 class="review-block__title"><span>My</span> Client's Stories</h2>
+        <p class="review-block__subtitle">
+          Empowering people in new a digital journey with my super services
+        </p>
+      </div>
+
+      <!-- Right Side Cards -->
+      <div class="review-block__list">
+        
+        <!-- Card 1 -->
+        <div class="review-card">
+          <div class="review-card__top">
+            <img src="Logo A.png" alt="Company Logo" class="review-card__logo">
+            <img src="My image.jpg" alt="Client" class="review-card__avatar">
+          </div>
+          <div class="review-card__quote-icon">❝</div>
+          <p class="review-card__text">
+            “Taylor is a professional Designer he really helps my business by providing value to my business.”
+          </p>
+          <h4 class="review-card__name">AR King</h4>
+          <span class="review-card__role">SEO Specialist, Theme Junction</span>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="review-card">
+          <div class="review-card__top">
+            <img src="Logo A.png" alt="Company Logo" class="review-card__logo">
+            <img src="My image.jpg" alt="Client" class="review-card__avatar">
+          </div>
+          <div class="review-card__quote-icon">❝</div>
+          <p class="review-card__text">
+            “Taylor is a professional Designer he really helps my business by providing value to my business.”
+          </p>
+          <h4 class="review-card__name">Asim</h4>
+          <span class="review-card__role">Senior Software Dev, Cosmic Sport</span>
+        </div>
+
+      </div>
+    </div>
   </section>
+
   <br>
   <br>
   <br>
