--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
       <!-- Left Side -->
       <div class="review-block__intro">
-        <h2 class="review-block__title"><span>My</span> Client's Stories</h2>
+        <h2 class="review-block__title">My Client's Stories</h2>
         <p class="review-block__subtitle">
           Empowering people in new a digital journey with my super services
         </p>
